--- a/src/Eccube/Resource/locale/messages.en.yaml
+++ b/src/Eccube/Resource/locale/messages.en.yaml
@@ -513,6 +513,7 @@ admin.common.charge: Charge
 # Menu Items
 admin.home: Home
 admin.login: Login
+admin.link: 棚管理
 
 # ラベル
 admin.home.order_status_title: Order Status
