update CRUD company 2

--- a/src/Eccube/Resource/locale/messages.vi.yaml
+++ b/src/Eccube/Resource/locale/messages.vi.yaml
@@ -913,11 +913,11 @@ admin.customer.customer_list: Tất cả khách hàng
 admin.customer.customer_registration: Thêm khách hàng
 admin.customer.customer_address_registration: Đăng ký địa chỉ giao hàng
 
-admin.customer.company_registration: Đăng kí công ty trực thuộc
-admin.customer.company_all: Công ty trực thuộc
-admin.customer.company_info: Thông tin công ty trực thuộc
+admin.company.company_registration: Đăng kí công ty trực thuộc
+admin.company.company_all: Công ty trực thuộc
+admin.company.company_info: Thông tin công ty trực thuộc
 admin.common.company_code: ID công ty
-admin.customer.company_list: Danh sách công ty
+admin.company.company_list: Danh sách công ty
 
 admin.company.company_management: Công ty
 # Labels / Messages
