--- a/src/Eccube/Resource/locale/messages.en.yaml
+++ b/src/Eccube/Resource/locale/messages.en.yaml
@@ -210,7 +210,8 @@ front.mypage.nav__customer: Edit Customer Information
 front.mypage.nav__customer_complete: Edit Customer Information (Completed)
 front.mypage.nav__customer_address: Shipping Addresses
 front.mypage.nav__withdrow: Cancel Membership
-front.mypage.history_count: You have '%count% item(s) in the order history.'
+front.mypage.history_count: You have %count% item(s) in the order history.
+front.mypage.go_to_last_page: Tới trang cuối
 front.mypage.history_not_found: No order history found.
 front.mypage.message_not_found: Not found
 front.mypage.view_detail: See details
