Hoàn thành reponsive cho màn hình lịch sử mua hàng

--- a/src/Eccube/Resource/locale/messages.en.yaml
+++ b/src/Eccube/Resource/locale/messages.en.yaml
@@ -20,7 +20,7 @@ common.go_to_cart: Proceed to Cart
 common.go_to_confirm: Review
 common.go_to_next: Next
 common.move_to_page_top: Page top
-common.prev: Previous
+common.prev: Prev
 common.next: Next
 common.first: First
 common.last: Last
